Fix: label overlapping for russian

--- a/packages/components/src/components/input/input.scss
+++ b/packages/components/src/components/input/input.scss
@@ -215,6 +215,9 @@
         top: 1rem;
         transition: 0.25s ease all;
         transform-origin: top left;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        max-width: calc(100% - 1.4rem);
     }
     &:not(&--no-placeholder) {
         &__label {
